Banner bg added

--- a/layout.html
+++ b/layout.html
@@ -27,9 +27,11 @@
         </nav>
         <!-- Banner -->
         <section class="banner">
-            <h2>welcome to our basic layout</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates officiis officia vero amet deserunt quia minima, tempore exercitationem?</p>
-            <a href="#" class="learn-btn">Learn more</a>
+            <div class="banner-content">
+                <h2>welcome to our basic layout</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates officiis officia vero amet deserunt quia minima, tempore exercitationem?</p>
+                <a href="#" class="learn-btn">Learn more</a>
+            </div>
         </section>
     </header>
     <main class="container">
